Moved to jdk25. Upgraded dependencies.